--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@headlessui/vue": "^1.4.0",
     "@heroicons/vue": "^1.0.3",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
